--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ article {
 }
 
 h1 {
-    background-color: #6A8D73;
+    background-color: #d4a373;
     margin: 20px 0;
     font-size: 3rem;
     padding: 10px;
@@ -35,15 +35,27 @@ h1 {
     background-size: cover;
 }
 
-form, p {
+form {
     font-size: 1.5rem;
     font-weight: 600;
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #6A8D73;
+    background-color: #d4a373;
+    padding: 15px 20px;
+    border-radius: 10px;
+    margin: 10px 300px 10px 300px;
+}
+
+p {
+    font-size: 1.5rem;
+    font-weight: 600;
+    flex-direction: column;
+    text-align: center;
+    background-color: #d4a373;
     padding: 30px 40px;
     border-radius: 10px;
+    margin: 10px 300px 10px 300px;
 }
 
 form>input, form>label {
@@ -60,6 +72,7 @@ button {
     font-size: 1.2rem;
     font-weight: 600;
     border-radius: 10px;
+    /* margin: 10px 300px 10px 300px; */
 }
 
 button:hover {
@@ -76,6 +89,10 @@ article p {
 
 .hide {
     display: none;
+}
+
+.show {
+    display: flex;
 }
 
 img {
